# starcite-clients

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.jsonc  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: check-packages.yml  publish-npm.yml  semantic-release.yml
docs/: ai-onboarding.md  ai-sdk-migration.md  ai-sdk-session-behavior-spec.md  reliability-failure-modes.md  session-cache-spec.md
docs/tasks/: backend-session-listener.md  frontend-chat-state.md  frontend-session-bootstrap.md  multi-agent-shared-session.md
examples/franken-monolith/: .env.example  README.md  package.json  tsconfig.json
examples/franken-monolith/src/: contracts.ts  index.ts  openai-responses.ts  responses-worker.ts
examples/langchain-fastapi-multi-agent/: README.md  pyproject.toml  uv.toml
examples/langchain-fastapi-multi-agent/app/: __init__.py  main.py  schemas.py  swarm.py
examples/langchain-fastapi-multi-agent/app/static/: app.js  index.html  styles.css
examples/multi-agent-viewer/: .gitignore  next.config.ts  package.json  tsconfig.json
examples/multi-agent-viewer/app/: globals.css  layout.tsx  page.tsx
examples/multi-agent-viewer/lib/: agent.ts  cursor-store.ts  starcite.ts
examples/nextjs-chat-ui/: .env.example  .gitignore  README.md  agent.ts  next.config.ts  package.json  tsconfig.json
examples/nextjs-chat-ui/app/: globals.css  (+2 more)
scripts/: live-smoke.ts  perf-check.ts  publish-starcite-cli.mjs  release-auto.mjs  release.mjs  sync-versions.mjs  verify-release-tag.mjs  version.mjs
(+6 files in other folders)
